Added: - item_shop_disable.xml - item_shop_enabled.xml - activity_main.xml

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">ShoppingList</string>
+    <string name="btn_description">Add item button</string>
 </resources>
