--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,4 +6,6 @@
     <string name="btn_save">Сохранить</string>
     <string name="error_input_name">Ошибка ввода имени</string>
     <string name="error_input_count">Ошибка ввода количества</string>
+<!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
 </resources>
